--- a/20_JS_Back_end_Sep_2021/01_IntroTo_NodeJS/03_Cat_Shelter/package.json
+++ b/20_JS_Back_end_Sep_2021/01_IntroTo_NodeJS/03_Cat_Shelter/package.json
@@ -12,6 +12,8 @@
     "license": "ISC",
     "dependencies": {
         "formidable": "^1.2.2",
-        "nodemon": "^2.0.12"
+        "mv": "^2.1.1",
+        "nodemon": "^2.0.12",
+        "uniqid": "^5.4.0"
     }
 }
