--- a/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/package.json
+++ b/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/package.json
@@ -4,9 +4,14 @@
     "description": "Education express app",
     "main": "index.js",
     "scripts": {
+        "start": "nodemon ./src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "nodemon": "^2.0.13"
+    }
 }
