--- a/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/package.json
+++ b/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
+        "express-handlebars": "^5.3.4",
         "nodemon": "^2.0.13"
     }
 }
