--- a/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/package.json
+++ b/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/package.json
@@ -4,7 +4,8 @@
     "description": "Education express app",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon ./src/index.js",
+        "start": "set NODE_ENV=development&& nodemon ./src/index.js",
+        "prod": "set NODE_ENV=production&& node ./src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
