--- a/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/package.json
+++ b/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/package.json
@@ -16,8 +16,10 @@
         "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.4",
+        "express-validator": "^6.13.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.0.10"
+        "mongoose": "^6.0.10",
+        "validator": "^13.6.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.13"
